# sdl_sandbox

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/sdl/sandbox_sample/: GameActivity.java
sample/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  main.cpp
